# llamaindex-proxyhat

./: README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  compat.yml
examples/: reader.py
src/llamaindex_proxyhat/: __init__.py  _resolve.py  reader.py
tests/: conftest.py  test_reader.py  test_resolve.py
