[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llamaindex-proxyhat"
version = "0.1.0"
description = "LlamaIndex web reader that loads URLs through ProxyHat residential proxies — rotation, geo-targeting, sticky sessions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ProxyHat", email = "support@proxyhat.com" }]
keywords = ["llama-index", "llamaindex", "proxy", "residential-proxy", "proxyhat", "web-scraping", "reader", "rag", "rotating-proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["llama-index-core>=0.10", "proxyhat>=0.2.0", "httpx>=0.26"]

[project.urls]
Homepage = "https://proxyhat.com"
Documentation = "https://docs.proxyhat.com"
Repository = "https://github.com/ProxyHatCom/llamaindex-proxyhat"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/llamaindex_proxyhat"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
